--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <section class="biodata-section">
     <div class="biodata-container">
       
-      <!-- Kiri - Tentang Saya -->
+<!-- Kiri - Tentang Saya -->
       <div class="biodata-column">
         <p>
           Hi, let me introduce Natalia Dortjie Ngilawana who is often called Nata.
@@ -20,6 +20,8 @@ Currently I am a student at the Indonesian Christian University of Maluku
 
       <!-- Tengah - Riwayat Pendidikan -->
       <div class="biodata-column timeline">
+    <section class="jumbotron text-center"></section>
+     <img src="C:\Users\ACER\Desktop\pemrograman web uts\.vscode\image\Natalia.jpg" alt="cinque Terre" width="128" height="128" style="border-radius: 50%">
         <h2>BIODATA</h2>
         <p>Started on Jul 2011</p>
         <span class="school">SD Kristen Batuputih</span>
